# stretch4_urdf

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  SUMMARY.md  camera_orientations.md  kinematic_changes.md  process_new_robot_model.py  process_new_tool.py  pyproject.toml  urdf_conventions.md
scratch/: test_fix.py
stretch4_urdf/: README.md  SE4.xacro  __init__.py  batches.md  calibration.md  camera_orientations.md
stretch4_urdf/SE4_accessories/docking_station/: docking_station.urdf
stretch4_urdf/SE4_accessories/docking_station/meshes/: apex_aruco_marker_link.STL  contacts_link.STL  docking_station_link.STL  left_aruco_marker_link.STL  right_aruco_marker_link.STL
stretch4_urdf/SE4_francis/: .gitignore  collision_mesh_config.yaml
stretch4_urdf/SE4_francis/meshes/: arm_l0_collision_link.STL  arm_l0_link.STL  arm_l1_collision_link.STL  arm_l1_link.STL  arm_l2_collision_link.STL  arm_l2_link.STL  arm_l3_collision_link.STL  arm_l3_link.STL  arm_l4_collision_link.STL  arm_l4_link.STL  base_collision_link.STL  base_link.STL  camera_center_link.STL  camera_left_link.STL  camera_right_link.STL  docking_contact_link.STL  gripper_camera_collision_link.STL  gripper_camera_link.STL  head_collision_link.STL  head_link.STL  lidar_left_collision_link.STL  lidar_left_link.STL  lidar_right_collision_link.STL  lidar_right_link.STL  lift_collision_link.STL  lift_link.STL  line_sensor_1_link.STL  line_sensor_2_link.STL  line_sensor_3_link.STL  line_sensor_4_link.STL  line_sensor_5_link.STL  sensor_0_link.STL  tool_attachment_site_collision_link.STL  tool_attachment_site_link.STL  wheel_0_collision_link.STL  wheel_0_link.STL  wheel_1_collision_link.STL  wheel_1_link.STL  wheel_2_collision_link.STL  wheel_2_link.STL  (+12 more)
stretch4_urdf/SE4_francis/xacro/: stretch_main.xacro
stretch4_urdf/SE4_tools/: end_effectors.md
stretch4_urdf/SE4_tools/eoa_wrist_dw4_tool_calibration/: eoa_wrist_dw4_tool_calibration.urdf
stretch4_urdf/SE4_tools/eoa_wrist_dw4_tool_calibration/meshes/: frame_quick_connect_interface.STL  quick_connect_interface_collision_link.STL  quick_connect_interface_link.STL
stretch4_urdf/SE4_tools/eoa_wrist_dw4_tool_pg4/: collision_mesh_config.yaml  eoa_wrist_dw4_tool_pg4.urdf
stretch4_urdf/SE4_tools/eoa_wrist_dw4_tool_pg4/meshes/: aruco_fingertip_left_collision_link.STL  aruco_fingertip_left_link.STL  aruco_fingertip_right_link.STL  finger_left_collision_link.STL  finger_left_link.STL  finger_right_collision_link.STL  finger_right_link.STL  grasp_center_collision_link.STL  grasp_frame_collision_link.STL  grasp_frame_link.STL  pjg_body_collision_link.STL  pjg_body_link.STL
stretch4_urdf/SE4_tools/eoa_wrist_dw4_tool_sg4/: collision_mesh_config.yaml  eoa_wrist_dw4_tool_sg4.urdf
stretch4_urdf/SE4_tools/eoa_wrist_dw4_tool_sg4/meshes/: aruco_fingertip_left_collision_link.STL  (+14 more)
stretch4_urdf/SE4_tools/eoa_wrist_dw4_tool_tablet/: collision_mesh_config.yaml  eoa_wrist_dw4_tool_tablet.urdf
stretch4_urdf/se4_tools/: README.md
stretch4_urdf/utils/: __init__.py  calibration_utils.py  generate_collision_mesh.py  stretch_urdf_viz.py  transform.py  update_urdf_with_collision_mesh_filepath.py  urdf_utils_generate_from_base_xacro.py  urdf_utils_generate_ik_urdfs.py
stretch4_urdf/utils/preprocessing/: __init__.py  generate_collision_mesh.py  process_new_robot_model.py  process_new_tool.py
tests/: test_urdf_generation.py
tools/: stretch_urdf_example.py  stretch_urdf_viz.py  stretch_urdf_viz_dex_teleop_ii.py
(+2 files in other folders)
