[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-robot-stretch4-urdf"
# Versioning follow CalVer (YYYY.MM.DD) for PEP 440 compliance
version = "2026.07.08"
description = "Stretch 4 URDF"
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
    { name = "Hello Robot Inc.", email = "support@hello-robot.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "yourdfpy>=0.0.58",
    "numpy",
    "pyyaml",
    "xacro>=2.1,<3.0",
]

[project.optional-dependencies]
robot = ["hello-robot-stretch4-body"]
preprocessing = ['open3d','trimesh']

[project.urls]
Repository = "https://github.com/hello-robot/stretch4_urdf"

[project.scripts]
stretch_urdf_viz = "stretch4_urdf.utils.stretch_urdf_viz:main"


[tool.setuptools]
packages = ["stretch4_urdf", "stretch4_urdf.utils"]

[tool.setuptools.package-data]
stretch4_urdf = [
    "SE4_*/*",
    "SE4_*/*/*",
    "SE4_*/*/*/*",
    "*.xacro",
    "utils/*.py",
]
